
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int posix_spawnattr_t ;
typedef int mach_port_t ;


 int MACH_MSG_TYPE_MAKE_SEND ;
 int MACH_PORT_NULL ;
 int MACH_PORT_RIGHT_RECEIVE ;
 int mach_port_allocate (int ,int ,int *) ;
 int mach_port_insert_right (int ,int ,int ,int ) ;
 int mach_task_self () ;
 int posix_spawn (int*,char*,int *,int *,char**,int *) ;
 int posix_spawnattr_init (int *) ;
 int posix_spawnattr_setauditsessionport_np (int *,int ) ;

int main() {

  mach_port_t p = MACH_PORT_NULL;
  mach_port_allocate(mach_task_self(), MACH_PORT_RIGHT_RECEIVE, &p);
  mach_port_insert_right(mach_task_self(), p, p, MACH_MSG_TYPE_MAKE_SEND);

  posix_spawnattr_t attrs;
  posix_spawnattr_init(&attrs);
  posix_spawnattr_setauditsessionport_np(&attrs,p);

  char* _argv[] = {"/usr/bin/id", ((void*)0)};
  int child_pid = 0;
  int spawn_err = posix_spawn(&child_pid,
                              "/usr/bin/id",
                              ((void*)0),
                              &attrs,
                              _argv,
                              ((void*)0));
}
